package Model;
/**
 * Class énumérant les différents types de terrains.
 */
public class fieldTypes {

    /**
     * Énumération des différents types de terrains.
     */
    public enum field {
        ELECTRIC, GRASSY, MISSY, PSYCHIC
    }

    /**
     * Énumération des différents types de terrains.
     */
    public enum weather {
        RAIN, SUNNY, HAIL, SANDSTORM
    }

    /**
     * Énumération des différents types de terrains.
     */
    public enum traps {
        SPIKES, ROCKS, POISON_SPIKES
    }
}